# Schedule-Manipulation-Analysis-Tool-Experiment-

./: .gitignore  CLAUDE.md  EXPERIMENT-REPORT.md  FIDELITY-COMPROMISE-importers.md  FIDELITY-DECISION-cpm-engine.md  FIDELITY-DECISION-data-model.md  FIDELITY-DECISION-dcma-coverage.md  HANDOFF.md  PHASE-COMPLETE-0.md  PHASE-COMPLETE-1.md  PHASE-COMPLETE-10.md  PHASE-COMPLETE-2.md  PHASE-COMPLETE-5.md  PHASE-COMPLETE-8.md  PHASE-COMPLETE-9.md  README.md  Start-Schedule-Tool.bat  Start-Schedule-Tool.command  build-app.bat  build-app.command  launch.py  pyproject.toml  requirements-dev.txt  requirements-mpp.txt  requirements.txt
.claude/: settings.json
.claude/agents/: cpm-author.md  fidelity-parity-auditor.md  integration-merger.md  metric-author.md  parser-author.md  qa-auditor.md  report-author.md  schema-author.md  security-cui-auditor.md  ui-author.md
.claude/hooks/: session-start.sh
.github/workflows/: build-apps.yml  ci.yml
app/: __init__.py  analysis.py  config.py  errors.py  exceptions.py  routes.py
app/cpm/: __init__.py  calendar_math.py  engine.py  result.py
app/metrics/: __init__.py  bei.py  cpli.py  critical_path_test.py  duration.py  hard_constraints.py  high_float.py  invalid_dates.py  missed_tasks.py  negative_float.py  resources.py
app/models/: __init__.py  calendar.py  enums.py  schedule.py
app/parsers/: __init__.py  mpp.py  msp_xml.py  xer.py
app/templates/: index.html
docs/: ARCHITECTURE.md  HAZARDS.md  MPXJ.md  OLLAMA.md  PARITY.md  REFERENCES.md  cpm-model.md  dcma-metrics.md  parser-contract.md
docs/skills/: native-mpp-parser.md
launch/: Install-Desktop-Shortcut.bat  README.md  Schedule-Forensics.bat  Schedule-Forensics.command  Schedule-Forensics.desktop  _ollama.sh  schedule-forensics.sh
scripts/: parity_report.py  validate_against_msp.py
src/schedule_forensics/: __init__.py  analysis.py  cei.py  cpm.py  dcma_checks.py  dcma_progress.py  diff_engine.py  driving_path.py  exec_summary.py  float_analysis.py  inference.py  metrics_common.py  parity.py  performance_indices.py  phases.py  report_excel.py  (+4 more)
tests/: conftest.py  test_analysis.py  test_app_smoke.py  test_cei.py  test_com_msproject.py  test_cpm.py  test_cpm_constraints.py  test_cpm_link_types.py  test_dcma_checks.py  test_dcma_progress.py  test_diff_engine.py  test_driving_path.py  test_end_to_end.py  test_exec_summary.py  test_float_analysis.py  test_importer_mpp_mpxj.py  test_importer_msp_xml.py  test_importer_xer.py  test_inference.py  test_inference_local.py  test_inference_ollama.py  test_metrics_common.py  test_metrics_duration_float.py  test_metrics_hard_constraints.py  test_metrics_negative_float.py  test_metrics_path_indices.py  test_metrics_progress.py  test_models.py  test_parity.py  test_parser.py  test_parsers_native.py  test_performance_indices.py  test_phases.py  test_report_diff.py  test_report_excel.py  test_report_word.py  test_schema_freeze.py  test_schemas.py  test_sra.py  test_version_matcher.py  (+2 more)
tools/: make_icon.py
(+16 files in other folders)
