[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-forensics"
version = "0.0.1"
description = "Local-only, CUI-compliant forensic schedule-analysis tool (DCMA-14, CPM, SRA)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "openpyxl>=3.1,<4",
    "python-docx>=1,<2",
    "flask>=3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
# Optional Windows-only COM path: drives an installed MS Project to read native
# .mpp (importers/com_msproject.py). The environment marker keeps pywin32 off
# non-Windows installs, so `pip install -e ".[com]"` is a no-op except on Windows.
com = [
    "pywin32>=306; platform_system == 'Windows'",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["schedule_forensics"]

[[tool.mypy.overrides]]
module = ["openpyxl.*", "docx.*", "win32com.*", "pythoncom", "pywintypes"]
ignore_missing_imports = true
